add generate validator
