# http/router/admin/admin.go
@@ -13,7 +13,7 @@ func (g *Admin) Init(rg *gin.RouterGroup) {
 	aR := rg.Group("/admin")
 	{
 		aR.GET("/list", g.controller.List)
-		aR.GET("/index", g.controller.Index)
+		aR.GET("/detail/:id", g.controller.Detail)
 		aR.POST("/create", g.controller.Create)
 		aR.GET("/error", g.controller.Error)
 	}
